{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 33,
  "lineage": "9bc2bf83-d3d2-e3b5-ada5-4ae36e3c735b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ecs_nat_gw_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d82f5dae32c035f0",
            "domain": "vpc",
            "id": "eipalloc-0d82f5dae32c035f0",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-210-38-16.compute-1.amazonaws.com",
            "public_ip": "44.210.38.16",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-nat_gw_eip"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-nat_gw_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ecs_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:362387340557:internet-gateway/igw-08eedbf661400e030",
            "id": "igw-08eedbf661400e030",
            "owner_id": "362387340557",
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-internet_gateway"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-internet_gateway"
            },
            "vpc_id": "vpc-0b3266b2a14a456ae"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ecs_private_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d82f5dae32c035f0",
            "connectivity_type": "public",
            "id": "nat-07efbf761af2a1127",
            "network_interface_id": "eni-016917a2b59e10e1b",
            "private_ip": "10.1.7.242",
            "public_ip": "44.210.38.16",
            "subnet_id": "subnet-09fe60b91cbfb2a3d",
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-private_nat_gateway"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-private_nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.ecs_nat_gw_eip",
            "aws_subnet.ecs_public_subnets",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.aws_azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ecs_private_routing_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:362387340557:route-table/rtb-03f1f0e70bf41c4f1",
            "id": "rtb-03f1f0e70bf41c4f1",
            "owner_id": "362387340557",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07efbf761af2a1127",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-private_routing_table"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-private_routing_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3266b2a14a456ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ecs_nat_gw_eip",
            "aws_nat_gateway.ecs_private_nat_gw",
            "aws_subnet.ecs_public_subnets",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.aws_azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ecs_public_routing_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:362387340557:route-table/rtb-03f45d8ac1ee2cea1",
            "id": "rtb-03f45d8ac1ee2cea1",
            "owner_id": "362387340557",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08eedbf661400e030",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-public_routing_table"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-public_routing_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3266b2a14a456ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ecs_internet_gateway",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01aff81a4eb5de74f",
            "route_table_id": "rtb-03f1f0e70bf41c4f1",
            "subnet_id": "subnet-0481e32e1473dd0bd"
          },
          "dependencies": [
            "aws_eip.ecs_nat_gw_eip",
            "aws_nat_gateway.ecs_private_nat_gw",
            "aws_route_table.ecs_private_routing_table",
            "aws_subnet.ecs_private_subnets",
            "aws_subnet.ecs_public_subnets",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac1108b4555aceeb",
            "route_table_id": "rtb-03f1f0e70bf41c4f1",
            "subnet_id": "subnet-0168e13c155fa3512"
          },
          "dependencies": [
            "aws_eip.ecs_nat_gw_eip",
            "aws_nat_gateway.ecs_private_nat_gw",
            "aws_route_table.ecs_private_routing_table",
            "aws_subnet.ecs_private_subnets",
            "aws_subnet.ecs_public_subnets",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2ca9633c9c3ba6d",
            "route_table_id": "rtb-03f1f0e70bf41c4f1",
            "subnet_id": "subnet-0495afdea60c8fe0e"
          },
          "dependencies": [
            "aws_eip.ecs_nat_gw_eip",
            "aws_nat_gateway.ecs_private_nat_gw",
            "aws_route_table.ecs_private_routing_table",
            "aws_subnet.ecs_private_subnets",
            "aws_subnet.ecs_public_subnets",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09262528d8841eee3",
            "route_table_id": "rtb-03f1f0e70bf41c4f1",
            "subnet_id": "subnet-0b9c0bd0b2adeb8ae"
          },
          "dependencies": [
            "aws_eip.ecs_nat_gw_eip",
            "aws_nat_gateway.ecs_private_nat_gw",
            "aws_route_table.ecs_private_routing_table",
            "aws_subnet.ecs_private_subnets",
            "aws_subnet.ecs_public_subnets",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032a8211324fa9478",
            "route_table_id": "rtb-03f1f0e70bf41c4f1",
            "subnet_id": "subnet-086e653bb33d405d7"
          },
          "dependencies": [
            "aws_eip.ecs_nat_gw_eip",
            "aws_nat_gateway.ecs_private_nat_gw",
            "aws_route_table.ecs_private_routing_table",
            "aws_subnet.ecs_private_subnets",
            "aws_subnet.ecs_public_subnets",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03614ceee45143289",
            "route_table_id": "rtb-03f1f0e70bf41c4f1",
            "subnet_id": "subnet-0c33cdd07acc40c48"
          },
          "dependencies": [
            "aws_eip.ecs_nat_gw_eip",
            "aws_nat_gateway.ecs_private_nat_gw",
            "aws_route_table.ecs_private_routing_table",
            "aws_subnet.ecs_private_subnets",
            "aws_subnet.ecs_public_subnets",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.aws_azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066bc2e28c120c28b",
            "route_table_id": "rtb-03f45d8ac1ee2cea1",
            "subnet_id": "subnet-09fe60b91cbfb2a3d"
          },
          "dependencies": [
            "aws_internet_gateway.ecs_internet_gateway",
            "aws_route_table.ecs_public_routing_table",
            "aws_subnet.ecs_public_subnets",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ec5320684808644",
            "route_table_id": "rtb-03f45d8ac1ee2cea1",
            "subnet_id": "subnet-05984c71990c62af9"
          },
          "dependencies": [
            "aws_internet_gateway.ecs_internet_gateway",
            "aws_route_table.ecs_public_routing_table",
            "aws_subnet.ecs_public_subnets",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e723e284b455eb20",
            "route_table_id": "rtb-03f45d8ac1ee2cea1",
            "subnet_id": "subnet-0546443c24d7b1518"
          },
          "dependencies": [
            "aws_internet_gateway.ecs_internet_gateway",
            "aws_route_table.ecs_public_routing_table",
            "aws_subnet.ecs_public_subnets",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e1d45466a72e17d",
            "route_table_id": "rtb-03f45d8ac1ee2cea1",
            "subnet_id": "subnet-0e03e272816e5af80"
          },
          "dependencies": [
            "aws_internet_gateway.ecs_internet_gateway",
            "aws_route_table.ecs_public_routing_table",
            "aws_subnet.ecs_public_subnets",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058012abdad65d8a7",
            "route_table_id": "rtb-03f45d8ac1ee2cea1",
            "subnet_id": "subnet-0ce33915e0a003a77"
          },
          "dependencies": [
            "aws_internet_gateway.ecs_internet_gateway",
            "aws_route_table.ecs_public_routing_table",
            "aws_subnet.ecs_public_subnets",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02cc3036629159c9b",
            "route_table_id": "rtb-03f45d8ac1ee2cea1",
            "subnet_id": "subnet-0c73949360887b074"
          },
          "dependencies": [
            "aws_internet_gateway.ecs_internet_gateway",
            "aws_route_table.ecs_public_routing_table",
            "aws_subnet.ecs_public_subnets",
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.aws_azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecs_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:362387340557:subnet/subnet-0481e32e1473dd0bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0481e32e1473dd0bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "362387340557",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-private_subnet-1"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-private_subnet-1"
            },
            "vpc_id": "vpc-0b3266b2a14a456ae"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:362387340557:subnet/subnet-0168e13c155fa3512",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0168e13c155fa3512",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "362387340557",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-private_subnet-2"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-private_subnet-2"
            },
            "vpc_id": "vpc-0b3266b2a14a456ae"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:362387340557:subnet/subnet-0495afdea60c8fe0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0495afdea60c8fe0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "362387340557",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-private_subnet-3"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-private_subnet-3"
            },
            "vpc_id": "vpc-0b3266b2a14a456ae"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:362387340557:subnet/subnet-0b9c0bd0b2adeb8ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9c0bd0b2adeb8ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "362387340557",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-private_subnet-4"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-private_subnet-4"
            },
            "vpc_id": "vpc-0b3266b2a14a456ae"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:362387340557:subnet/subnet-086e653bb33d405d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086e653bb33d405d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "362387340557",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-private_subnet-5"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-private_subnet-5"
            },
            "vpc_id": "vpc-0b3266b2a14a456ae"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:362387340557:subnet/subnet-0c33cdd07acc40c48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.1.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c33cdd07acc40c48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "362387340557",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-private_subnet-6"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-private_subnet-6"
            },
            "vpc_id": "vpc-0b3266b2a14a456ae"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.aws_azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecs_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:362387340557:subnet/subnet-09fe60b91cbfb2a3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09fe60b91cbfb2a3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "362387340557",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-public_subnet-1"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-public_subnet-1"
            },
            "vpc_id": "vpc-0b3266b2a14a456ae"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:362387340557:subnet/subnet-05984c71990c62af9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05984c71990c62af9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "362387340557",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-public_subnet-2"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-public_subnet-2"
            },
            "vpc_id": "vpc-0b3266b2a14a456ae"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:362387340557:subnet/subnet-0546443c24d7b1518",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.9.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0546443c24d7b1518",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "362387340557",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-public_subnet-3"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-public_subnet-3"
            },
            "vpc_id": "vpc-0b3266b2a14a456ae"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:362387340557:subnet/subnet-0e03e272816e5af80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e03e272816e5af80",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "362387340557",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-public_subnet-4"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-public_subnet-4"
            },
            "vpc_id": "vpc-0b3266b2a14a456ae"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:362387340557:subnet/subnet-0ce33915e0a003a77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.1.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce33915e0a003a77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "362387340557",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-public_subnet-5"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-public_subnet-5"
            },
            "vpc_id": "vpc-0b3266b2a14a456ae"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:362387340557:subnet/subnet-0c73949360887b074",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.1.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c73949360887b074",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "362387340557",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-public_subnet-6"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "test-ecs-public_subnet-6"
            },
            "vpc_id": "vpc-0b3266b2a14a456ae"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "data.aws_availability_zones.aws_azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:362387340557:vpc/vpc-0b3266b2a14a456ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0d907e84d5119bf44",
            "default_route_table_id": "rtb-04a5ed10c4ca21952",
            "default_security_group_id": "sg-0865a3d7a8dffc1d5",
            "dhcp_options_id": "dopt-cd1e80aa",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b3266b2a14a456ae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04a5ed10c4ca21952",
            "owner_id": "362387340557",
            "tags": {
              "CreatedBy": "Terraform",
              "Name": "test-main_vpc"
            },
            "tags_all": {
              "CreatedBy": "Terraform",
              "Name": "test-main_vpc"
            }
          }
        }
      ]
    }
  ]
}